-------------------------------------------------------------------------------
  Version 20201108 (2020-11-08)
-------------------------------------------------------------------------------
  * Initial release