@@ -2,7 +2,7 @@ Upstream Author(s):
     Paweł "pavroo" Pijanowski <pavroo@onet.eu>
 
 Files: *    
-    Copyright (C) 2020 Paweł Pijanowski
+    Copyright (C) 2020-2021 Paweł Pijanowski
     License: GPL-3
 
 License:
