@@ -3,12 +3,11 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Search DuckDuckGo with Sparky</title>
-    <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="data/style.css" rel="stylesheet" type="text/css" media="screen" />
   </head>
   <body>
   <div class="scrollmenu">
   <a href="https://sparkylinux.org">Home</a>
-  <a href="https://sparkylinux.org/about/">About</a>
   <a href="https://sparkylinux.org/download/">Download</a>
   <a href="https://forum.sparkylinux.org">Forums</a>
   <a href="https://wiki.sparkylinux.org">Wiki</a>
@@ -17,6 +16,7 @@
   <a href="https://twitter.com/SparkyLinux">Twitter</a>
   <a href="https://mewe.com/join-front/sparkylinux">MeWe</a>
   <a href="https://t.me/sparkylinux">Telegram</a>
+  <a href="https://www.reddit.com/r/SparkyLinux/">Reddit</a>
   <a href="https://sparkylinux.org/feed/">News</a>
   <a href=""></a>
 </div>
@@ -26,7 +26,7 @@
     <div style="text-align: center;"><iframe src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" style="overflow:hidden;margin:0;padding:0;width:408px;height:40px;" frameborder="0"></iframe></div>
      <br>&nbsp;
      <br>&nbsp;
-     <p style="text-align: center;"><a href="https://sparkylinux.org"><img alt="SparkyLinux" src="logo.png" title="SparkyLinux"></a><br></p>
+     <p style="text-align: center;"><a href="https://sparkylinux.org"><img alt="SparkyLinux" src="data/logo.png" title="SparkyLinux"></a><br></p>
      <div style="text-align: center;"><b>SparkyLinux - frendly and secure OS.<br />Since 2011.</b></div>
 </body>
 </html>
