@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20210206 (2021-02-06)
+-------------------------------------------------------------------------------
+  * Added Reddit to menu
+  * Moved data files to a subdirectory
+
+-------------------------------------------------------------------------------
   Version 20201108 (2020-11-08)
 -------------------------------------------------------------------------------
   * Initial release
